<resources>
    <string name="app_name">Parada Obrigatoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_patio">Patio</string>
    <string name="menu_entry">Entrada</string>
    <string name="amount_vehicles">Quantidade de veículos</string>
    <string name="amount_total">Valor total</string>
    <string name="money">Dinheiro</string>
    <string name="credit">Crédito</string>
    <string name="debit">Débito</string>
    <string name="pix">Pix</string>
    <string name="login">Login</string>
    <string name="entry">entrada</string>
    <string name="exit">saída</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="create_account">Criar conta</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="logout">LogOut</string>
    <string name="plate">Placa</string>
    <string name="color">Cor</string>
    <string name="model">Modelo</string>
    <string name="time">Tempo</string>
    <string name="value">Valor</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="total">total</string>
    <string name="payment">pagamento</string>
    <string name="new_account">Criar Conta</string>


</resources>