<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hudson.paradaobrigatoria.view.menu.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patio"
        android:name="com.hudson.paradaobrigatoria.view.menu.patio.PatioFragment"
        android:label="@string/menu_patio"
        tools:layout="@layout/fragment_patio" />

    <fragment
        android:id="@+id/nav_entry"
        android:name="com.hudson.paradaobrigatoria.view.menu.entry.EntryFragment"
        android:label="@string/menu_entry"
        tools:layout="@layout/fragment_entry" />
</navigation>